# firecast-ai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  BUG_FIX_REPORT.md  BUG_REPORT.md  COMPLETE_BUGFIX_SUMMARY.md  CONTRIBUTING.md  DEBUG_SUMMARY.md  IMPLEMENTATION_GUIDE.md  LICENSE  Makefile  Procfile  RAILWAY_DEPLOY_GUIDE.md  README.md  RISK_FACTORS_BUGFIX_SUMMARY.md  SIMPLE_IMPLEMENTATION_GUIDE.md  apt.txt  cured  deploy.ps1  docker-compose.yml  launch_prototype.py  main.py  pyproject.toml  railway.toml  railway_api.toml  render-build.sh  render.yaml  requirements-api.txt  requirements-cuda.txt  requirements-dev.txt  requirements-frontend.txt  requirements.txt  start_api.py  start_api.sh  start_api_debug.sh
add_new_model/: causal_gru_best.pth  feature_cols.json  final_modelling_V4.1_GeminiPRO.ipynb  model_config.json  raw_features.json  seq_len.json  threshold_config.json  train_stats.json
data/: _tmp_hexagons_res_6.json  firecast.db  firecast_data_readymodelling_final_V3.csv  processed_firecast_features_v3.csv
docker_stash/: Dockerfile
frontend/: app.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  interactive_map.py  interactive_map_simple.py  map_interface.py  model_management.py  results_display.py  sidebar.py  weather_display.py
frontend/locales/: en.json  id.json
frontend/utils/: __init__.py  analytics.py  gee_data.py  (+7 more)
frontend_react/: README.md  index.html  package-lock.json  package.json  tsc_errors.txt  tsconfig.json  vite.config.ts
migrations/: 066_add_model_versioning.py
models/: cnn_best.pth  ensemble_threshold.pkl  feature_columns.json  lgbm_best.pkl  scaler.pkl
notebooks/: 01_feature_engineering.ipynb  02_cnn1d_baseline.ipynb  03_ensemble_cnn+lgbm.ipynb  04_hyperparameter_tuning.ipynb
scripts/: activate_model.py  inference.py  register_model.py  train.py
src/: __init__.py  auth.py  config.py  data_loader.py  database.py  feature_engineering.py  geo_api.py  launch.py  predict.py  utils.py
tests/: __init__.py  test_config.py  test_integration.py  test_prediction.py
(+17 files in other folders)
