[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "firecast"
version = "1.0.0"
description = "Fire Forecasting Ensemble Model using CNN + LightGBM"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FireCast Team", email = "team@firecast.com"},
]
keywords = [
    "fire",
    "forecasting",
    "machine-learning",
    "ensemble",
    "cnn",
    "lightgbm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "torch>=1.10.2",
    "lightgbm==3.3.5",
    "joblib>=1.3.1",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "tqdm>=4.66.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/firecast"
Documentation = "https://github.com/yourusername/firecast/wiki"
Repository = "https://github.com/yourusername/firecast.git"
Issues = "https://github.com/yourusername/firecast/issues"

[project.scripts]
firecast = "main:main"

[tool.setuptools]
packages = ["src", "src.models"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
